--- a/notice/templates/notice/member-list.html
+++ b/notice/templates/notice/member-list.html
@@ -24,9 +24,6 @@
           <script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
           <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
           <script src="../../layui_exts/excel.js"></script>
-          <script>
-            LAY_EXCEL.exportExcel([[1, 2, 3]], '表格导出.xlsx', 'xlsx')
-          </script>
         <![endif]-->
     </head>
     <body>
@@ -61,13 +58,23 @@
                                 </div>
                             </form>
                         </div>
-                            <div class="layui-card-header">
-                                <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>删除</button>
-                                <button class="layui-btn" onclick="xadmin.open('添加用户','/notice/user-add/',500,600)"><i class="layui-icon"></i>添加</button>
-                                <button class="layui-btn layui-btn-normal" onclick="print()"><i class="iconfont">&#xe6c9; </i>打印</button>
-                                <button class="layui-btn layui-btn-normal" onclick="exportFile()"  ><i class="iconfont">&#xe73f; </i>导出</button>
-                                <button class="layui-btn layui-btn-normal" onclick="xadmin.open('修改资料','/notice/user-add/',500,600)"><i class="iconfont">&#xe642; </i>修改</button>
-                            </div>
+
+                        <div class="layui-card-header">
+                            <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>删除
+                            </button>
+                            <button class="layui-btn" onclick="xadmin.open('添加用户','/notice/user-add/',500,600)"><i
+                                    class="layui-icon"></i>添加
+                            </button>
+                            <button class="layui-btn layui-btn-normal" onclick="print()"><i
+                                    class="iconfont">&#xe6c9; </i>打印
+                            </button>
+                            <button class="layui-btn layui-btn-normal" onclick="exportFile()"><i class="iconfont">&#xe73f; </i>导出
+                            </button>
+                            <button class="layui-btn layui-btn-normal"
+                                    onclick="xadmin.open('修改资料','/notice/user-add/',500,600)"><i class="iconfont">&#xe642; </i>修改
+                            </button>
+                        </div>
+
                         <div class="layui-card-body layui-table-body layui-table-main" >
                             <table class="layui-table layui-form" id="usertable" lay-filter="usertable">
                                 <thead>
@@ -75,7 +82,7 @@
                                             <th>
                                               <input fixed ="left" lay-filter="checkall" lay-skin="primary" name="" type="checkbox">
                                             </th>
-                                            <th>ID</th>
+                                          <th lay-data="{width:80, sort:true}">ID</th>
                                             <th>用户名</th>
                                             <th>性别</th>
                                             <th>手机</th>
@@ -138,17 +145,32 @@
         </div>
     </body>
     <script>
-        layui.use(['laydate','form','jquery'], function(){
+        layui.use(['laydate','form','jquery','table'], function(){
             var laydate = layui.laydate;
             var  form = layui.form;
             var $ = layui.jquery;
             var table = layui.table;
-            //转换静态表格
-            table.init('usertable', {
-                  height: 315 //设置高度
-                  ,limit: 15 //注意：请务必确保 limit 参数（默认：10）是与你服务端限定的数据条数一致
-                  //支持所有基础参数
+            //执行渲染
+            table.render({
+                  url:{{use.page}}
+                  ,elem: '#demo' //指定原始表格元素选择器（推荐id选择器）
+                  ,height: 500//容器高度
+                  ,cols: [{checkbox: true}
+                        ,{field: 'data.userid', title: 'ID', width: 80}
+                        ,{field: 'data.username', title: '用户名', width: 120}]
+                 ,toolbar: '#toolbarDemo'
+                 ,parseData: function(res){ //res 即为原始返回的数据
+                        return {
+                          "code": res.status, //解析接口状态
+                          "msg": res.message, //解析提示文本
+                          "count": res.total, //解析数据长度
+                          "data": res.use.page.item //解析数据列表
+                        };
+                      }
+                 ,page:True
+                 ,limit:15
                 });
+
             // 监听查询提交
             form.on('submit(sreach)', function(data){
               var ts = data.field;   //获取表单的键值对
