--- a/notice/templates/notice/shouye.html
+++ b/notice/templates/notice/shouye.html
@@ -87,7 +87,7 @@
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('用户列表','/notice/member-list/')">
+                                <a onclick="xadmin.add_tab('用户列表','/notice/member-yemian/')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>用户列表</cite></a>
                             </li>
